Chapter 2 Practice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\ajsouhrada\Desktop\GitHub\unit1Objects\Chapter 2 Practice
-d
C:\Users\ajsouhrada\Desktop\GitHub\unit1Objects\Chapter 2 Practice\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\ajsouhrada\Desktop\GitHub\unit1Objects\Chapter 2 Practice\DieSimulator.java
<---- end of javadoc command ---->
Loading source file C:\Users\ajsouhrada\Desktop\GitHub\unit1Objects\Chapter 2 Practice\DieSimulator.java...
C:\Users\ajsouhrada\Desktop\GitHub\unit1Objects\Chapter 2 Practice\DieSimulator.java:5: error: reached end of file while parsing
        Random die = new Random(
                                ^
1 error
